--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
     <string name="edit_profile">Edit Profile</string>
     <string name="settings">Settings</string>
     <string name="dd_mm_yy">dd/mm/yy</string>
+    <string name="save">Save</string>
     <string-array name="gender">
         <item>Male</item>
         <item>Female</item>
