--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="settings">Settings</string>
     <string name="dd_mm_yy">dd/mm/yy</string>
     <string name="save">Save</string>
+    <string name="home_logo">Home Logo</string>
     <string-array name="gender">
         <item>Male</item>
         <item>Female</item>
